# create-cursor-app

./: .cursorrules  .gitignore  CHANGELOG.md  Cargo.toml  PROJECT_SCOPE.md  README.md  package.json
.github/workflows/: release.yml
scripts/: bump_version.sh
src/: lib.rs  main.rs
src/cli/: index.js  mod.rs
src/lib/: index.js
src/lib/templates/: config.rs  index.js  mod.rs  processor.js  processor.rs
src/utils/: mod.rs  template.rs
templates/basic/: PROMPT.md
tests/: cli.test.js  cli_tests.rs  processor.test.js  template_tests.rs  templates.test.js
