[package]
name = "create-cursor-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-cursor-app"
path = "src/main.rs"

[lib]
name = "create_cursor_app"
path = "src/lib.rs"

[dependencies]
clap = "3.0"
console = "0.15"
inquire = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] } 